--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,7 @@ button {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  margin-top: 30px;
 }
 
 .company .title-text {
@@ -244,6 +245,7 @@ button {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  margin-top: 10px;
 }
 
 /*!footer*/
