--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,15 @@
   --col--lgrey: #757575;
   --col--blue: #2196f3;
   --col--grey: #2f303a;
-  --col--white: #f5f5f5;
+  --colf5--white: #f5f5f5;
+  --colff--white: #ffffff;
 }
 .section {
   padding: 94px 0;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: var(--colff--white);
   color: var(--col--black);
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
@@ -31,7 +32,6 @@ button {
   cursor: pointer;
 }
 
-/*колір пом. тимчасовий*/
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -138,7 +138,8 @@ button {
   letter-spacing: 0.02em;
 }
 
-.contact .link:focus {
+.contact .link:focus,
+.contact .link:hover {
   color: var(--col--blue);
   text-decoration: none;
 }
@@ -161,7 +162,7 @@ button {
   margin-left: auto;
   margin-right: auto;
   max-width: 670px;
-  color: var(--col--white);
+  color: var(--colff--white);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -172,7 +173,7 @@ button {
 }
 
 .button-order {
-  color: var(--col--white);
+  color: var(--colff--white);
   background-color: var(--col--blue);
   border-color: transparent;
   cursor: pointer;
@@ -195,6 +196,7 @@ button {
 }
 
 .features-section {
+  background-color: var(--colff--white);
   padding-bottom: 0;
 }
 .section .section-title {
@@ -249,7 +251,7 @@ button {
   margin-top: 10px;
 }
 .company-jpg {
-  background-color: #ffffff;
+  background-color: var(--colff--white);
 }
 
 /*!footer*/
@@ -259,7 +261,7 @@ button {
 }
 
 .footer .logo-part {
-  color: var(--col--white);
+  color: var(--colff--white);
   text-decoration: none;
 }
 
@@ -269,7 +271,7 @@ button {
 }
 
 .address-link {
-  color: var(--col--white);
+  color: var(--colff--white);
   font-style: normal;
   text-decoration: none;
   font-size: 14px;
@@ -307,7 +309,8 @@ button {
 
 .filter-btn:hover,
 .filter-btn:focus {
-  background-color: #2196f3;
+  background-color: var(--col--blue);
+  color: var(--colff--white);
 }
 
 .main-btn {
@@ -324,13 +327,18 @@ button {
 }
 
 .filter-btn {
+  border-radius: 4px;
+  padding: 6px 22px;
+  margin-bottom: 56px;
+}
+
+.filter-btn {
   color: var(--col--black);
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
-  ali
 }
 
 .portfolio .title {
@@ -350,22 +358,35 @@ button {
   box-sizing: border-box;
   gap: 30px;
 }
+.portfolio img {
+  display: block;
+}
 .portfolio-link {
   text-decoration: none;
 }
 .footer {
   padding: 60px 0;
 }
-/*.border {
-  border-left: 1px;
-  border-right: 1px;
-  border-bottom: 1px;
-  border-style: solid;
-  border-color: #2196f3;
-}*/
 
-/*.signature {
+.port-text {
+  color: var(--colff--white);
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;*/
+  border-bottom: 1px solid #eeeeee;
+}
+.port-text .title {
+  color: var(--col--black);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+
+.port-text .title-text {
+  color: var(--col--lgrey);
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
+}
