--- a/css/styles.css
+++ b/css/styles.css
@@ -274,14 +274,14 @@ button {
   color: var(--colff--white);
   font-style: normal;
   text-decoration: none;
+
   font-size: 14px;
   line-height: 1.7;
 }
 
-.addres-link:hover,
-.addres-link:focus {
+.address-link:hover,
+.address-link:focus {
   color: var(--col--blue);
-  font-style: normal;
 }
 
 .contact-footer .link {
