--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ button {
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .features .title {
@@ -220,35 +220,38 @@ button {
   line-height: 1.7;
 }
 
+.work {
+  display: flex;
+  gap: 30px;
+}
+
 /*!our_company*/
 
 .company {
   display: flex;
   gap: 30px;
 }
-
-.company-container {
-  background-color: #f5f4fa;
+.our-company {
 }
 
-.work {
-  display: flex;
-  gap: 30px;
-}
-.company .title {
+.our-company .title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
-  margin-top: 30px;
+  padding-top: 30px;
+}
+.company-container {
+  background-color: #f5f4fa;
 }
 
-.company .title-text {
+.our-company .title-text {
   color: var(--col--lgrey);
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
   margin-top: 10px;
+  padding-bottom: 30px;
 }
 .company-jpg {
   background-color: var(--colff--white);
@@ -310,26 +313,21 @@ button {
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--col--blue);
-  color: var(--colff--white);
+  color: #f5f4fa;
 }
 
 .main-btn {
-  gap: 30px;
+  gap: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 34px;
   flex-wrap: nowrap;
-}
-
-.filter .filter-btn:not(:last-child) {
-  margin-right: 8px;
 }
 
 .filter-btn {
   border-radius: 4px;
   padding: 6px 22px;
-  margin-bottom: 56px;
+  margin-bottom: 50px;
 }
 
 .filter-btn {
