--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ button {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -99,6 +98,7 @@ button {
 .container .contact {
   display: flex;
   margin-left: auto;
+  margin-right: 0;
 }
 
 .nav-top {
